@@ -41,6 +41,7 @@ enum {
 	LANGUAGE_CZECH,
 	LANGUAGE_JAPANESE,
 	LANGUAGE_NORWEGIAN,
+	LANGUAGE_CATALAN,
 	LANGUAGE_COUNT
 };
 
